kleine vraag antwoord update

--- a/NLP1 2024 Practical 1 (student_version).ipynb
+++ b/NLP1 2024 Practical 1 (student_version).ipynb
@@ -1586,7 +1586,7 @@
     "id": "yEGZ9SV8pPaa"
    },
    "source": [
-    "*I would expect the number of features to increase exponentially as we increase the size of n-grams. This is because each additional n-gram size captures an increasing number of unique word combinations, leading to a rapid increase in the feature space. The number of features increases from 11.008 to 94.201 for unigrams+bigrams and to 211.298 for unigrams+bigrams+trigrams. This is a very rapid increase but not an exponential increase. I do expect this rate of increase to continue for larger n-grams, since the larger the n-grams become, the more different combinations of phrases you have to store in your vocabulary and thus the more features you get.*"
+    "*I would expect the number of features to increase exponentially as we increase the size of n-grams. This is because each additional n-gram size captures an increasing number of unique word combinations, leading to a rapid increase in the feature space. The number of features increases from 45,348 (without stemming, with stemming 32,404) to 465,262 for unigrams+bigrams and to 1,346,107 for unigrams+bigrams+trigrams. This is a very rapid increase but not an exponential increase. I do expect this rate of increase to continue for larger n-grams, since the larger the n-grams become, the more different combinations of phrases you have to store in your vocabulary and thus the more features you get.*"
    ]
   },
   {
